--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+
+html, body{
+    font-family: 'Roboto', sans-serif;
+    height: 100%;
+}
+
+body{
+    margin: 0;
+    height: 100%;
+}
+
+.clickable{
+ cursor: pointer;   
+}
+
+.clickable:hover{
+    color: lightgray;
+}
