--- a/src/app/layout/navigation/navigation.component.html
+++ b/src/app/layout/navigation/navigation.component.html
@@ -1,15 +1,1 @@
-<mat-nav-list>
-  <a mat-list-item (click)="onClose()">
-    <mat-icon>face</mat-icon>
-    <span class="nav-caption">Crawler</span>
-  </a>
-  <a mat-list-item>
-      <mat-icon>face</mat-icon>
-      <span class="nav-caption" (click)="onClose()">Infosec</span>
-
-  </a>
-  <a mat-list-item>
-      <mat-icon>face</mat-icon>
-      <span class="nav-caption">Operations</span>
-  </a>
-</mat-nav-list>
+<p>nav works!</p>
