--- a/src/app/layout/navigation/side-navigation/side-navigation.component.html
+++ b/src/app/layout/navigation/side-navigation/side-navigation.component.html
@@ -1,7 +1,7 @@
 <mat-nav-list>
-  <a mat-list-item routerLink="/crawler" (click)="onClose()">
+  <a mat-list-item routerLink="/analytics" (click)="onClose()">
     <mat-icon>face</mat-icon>
-    <span class="nav-caption">Crawler</span>
+    <span class="nav-caption" routerLink="/analytics">Analytics</span>
   </a>
   <a mat-list-item>
       <mat-icon>face</mat-icon>
