--- a/src/app/analytics/workout-table/workout-table.component.html
+++ b/src/app/analytics/workout-table/workout-table.component.html
@@ -1,30 +1,33 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+<app-workout-table-filter (dateSelected)="(onDateSelected($event))" ></app-workout-table-filter>
+
+<table mat-table [dataSource]="workouts" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Position Column -->
-  <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef> No. </th>
-    <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+  <ng-container matColumnDef="creationdate">
+    <th mat-header-cell *matHeaderCellDef> Creation Date </th>
+    <td mat-cell *matCellDef="let workout"> {{workout.creationdate}} </td>
   </ng-container>
 
   <!-- Name Column -->
-  <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef> Name </th>
-    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  <ng-container matColumnDef="duration">
+    <th mat-header-cell *matHeaderCellDef> Duration (min) </th>
+    <td mat-cell *matCellDef="let workout"> {{workout.duration | number: '1.1-1' }} </td>
   </ng-container>
 
   <!-- Weight Column -->
-  <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef> Weight </th>
-    <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+  <ng-container matColumnDef="totaldistance">
+    <th mat-header-cell *matHeaderCellDef> distanece (mi) </th>
+    <td mat-cell *matCellDef="let workout"> {{workout.totaldistance | number: '1.1-1'}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
-  <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef> Symbol </th>
-    <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+  <ng-container matColumnDef="totalenergyburned">
+    <th mat-header-cell *matHeaderCellDef> Energy Burned (kcal) </th>
+    <td mat-cell *matCellDef="let workout"> {{workout.totalenergyburned | number: '1.1-1'}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
