--- a/src/app/analytics/workout-table/workout-table.component.html
+++ b/src/app/analytics/workout-table/workout-table.component.html
@@ -3,10 +3,8 @@
     <mat-grid-tile>
         <app-workout-table-filter (dateSelected)="(onDateSelected($event))" ></app-workout-table-filter>
     </mat-grid-tile>
-
     <mat-grid-tile>
-
-        <app-workout-table-splits></app-workout-table-splits>
+        <app-workout-table-splits (splitsEmitter)="(onSplitsSelected($event))"></app-workout-table-splits>
     </mat-grid-tile>
   </mat-grid-list> 
 
@@ -32,7 +30,7 @@
 
   <!-- Weight Column -->
   <ng-container matColumnDef="totaldistance">
-    <th mat-header-cell *matHeaderCellDef> distanece (mi) </th>
+    <th mat-header-cell *matHeaderCellDef> Distance (mi) </th>
     <td mat-cell *matCellDef="let workout"> {{workout.totaldistance | number: '1.1-1'}} </td>
   </ng-container>
 
