--- a/src/app/analytics/workout-table/workout-table-filter/workout-table-filter.component.html
+++ b/src/app/analytics/workout-table/workout-table-filter/workout-table-filter.component.html
@@ -1,5 +1,5 @@
 <mat-form-field>
-    <input matInput [matDatepicker]="dp" placeholder="Month and Year" [formControl]="date">
+    <input matInput [matDatepicker]="dp" placeholder="Days of Month/Year" [formControl]="date">
     <mat-datepicker-toggle matSuffix [for]="dp"></mat-datepicker-toggle>
     <mat-datepicker #dp
                     startView="multi-year"
