trying to port to angular 8

--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -1,3 +1,9 @@
-<p>
-  <app-workout-table></app-workout-table>
-</p>
+<mat-tab-group>
+    <mat-tab label="Table">
+        <app-workout-table></app-workout-table>
+    </mat-tab>
+    <mat-tab label="Graphs">
+      <h1>Some more tab content</h1>
+      <p>...</p>
+    </mat-tab>
+  </mat-tab-group>
