--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -2,8 +2,8 @@
     <mat-tab label="Table">
         <app-workout-table></app-workout-table>
     </mat-tab>
-    <mat-tab label="Graphs">
-      <h1>Some more tab content</h1>
+    <mat-tab label="Charts">
+      <app-workout-charts></app-workout-charts>
       <p>...</p>
     </mat-tab>
   </mat-tab-group>
