--- a/src/app/analytics/workout-charts/workout-line-chart/workout-line-duration-chart/workout-line-duration-chart.component.html
+++ b/src/app/analytics/workout-charts/workout-line-chart/workout-line-duration-chart/workout-line-duration-chart.component.html
@@ -7,9 +7,8 @@
                   [options]="lineChartOptions"
                   [colors]="lineChartColors"
                   [legend]="lineChartLegend"
-                  [chartType]="lineChartType"
-                  (chartHover)="chartHovered($event)"
-                  (chartClick)="chartClicked($event)"></canvas>
+                  [chartType]="lineChartType">
+        </canvas>
       </div>
     </div>
   </div>
