--- a/src/app/analytics/workout-charts/workout-line-chart/workout-line-chart.component.html
+++ b/src/app/analytics/workout-charts/workout-line-chart/workout-line-chart.component.html
@@ -1,3 +1,3 @@
 <app-workout-line-mile-chart></app-workout-line-mile-chart>
-<app-workout-line-duration-chart></app-workout-line-duration-chart>
-<app-workout-line-energy-burned-chart></app-workout-line-energy-burned-chart>
+<!-- <app-workout-line-duration-chart></app-workout-line-duration-chart>
+<app-workout-line-energy-burned-chart></app-workout-line-energy-burned-chart> -->
