--- a/src/app/analytics/workout-charts/workout-line-chart/workout-line-chart.component.html
+++ b/src/app/analytics/workout-charts/workout-line-chart/workout-line-chart.component.html
@@ -1,3 +1,8 @@
+<mat-grid-list class="top-grid" height=2px cols="1" rowHeight="70px">
+    <mat-grid-tile>
+      <app-workout-line-chart-filter></app-workout-line-chart-filter>
+    </mat-grid-tile>
+</mat-grid-list>
 <app-workout-line-mile-chart></app-workout-line-mile-chart>
 <app-workout-line-duration-chart></app-workout-line-duration-chart>
 <app-workout-line-energy-burned-chart></app-workout-line-energy-burned-chart>
