--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -5,4 +5,6 @@
     <mat-tab label="Charts">
       <app-workout-charts></app-workout-charts>
     </mat-tab>
+    <mat-tab label="Analysis">
+    </mat-tab>
   </mat-tab-group>
