--- a/src/app/layout/navigation/side-navigation/side-navigation.component.html
+++ b/src/app/layout/navigation/side-navigation/side-navigation.component.html
@@ -1,15 +1,6 @@
 <mat-nav-list>
   <a mat-list-item routerLink="/analytics" (click)="onClose()">
-    <mat-icon>face</mat-icon>
+    <mat-icon>timeline</mat-icon>
     <span class="nav-caption" routerLink="/analytics">Analytics</span>
-  </a>
-  <a mat-list-item>
-      <mat-icon>face</mat-icon>
-      <span class="nav-caption"routerLink="/infosec" (click)="onClose()">Infosec</span>
-
-  </a>
-  <a mat-list-item>
-      <mat-icon>face</mat-icon>
-      <span class="nav-caption">Operations</span>
   </a>
 </mat-nav-list>
