--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -6,5 +6,6 @@
       <app-workout-charts></app-workout-charts>
     </mat-tab>
     <mat-tab label="Analysis">
+      <app-workout-analysis></app-workout-analysis>
     </mat-tab>
   </mat-tab-group>
