add some analysis

--- a/src/app/analytics/workout-analysis/workout-analysis-averages/workout-analysis-averages.component.html
+++ b/src/app/analytics/workout-analysis/workout-analysis-averages/workout-analysis-averages.component.html
@@ -1,4 +1,6 @@
-<mat-grid-list cols="4" rowHeight="1:1">
+
+<mat-grid-list cols="4" rowHeight="200px">
+    Averages
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
