fix to last 30 days

--- a/src/app/analytics/workout-analysis/workout-analysis-averages/workout-analysis-averages.component.html
+++ b/src/app/analytics/workout-analysis/workout-analysis-averages/workout-analysis-averages.component.html
@@ -1,6 +1,6 @@
 
 <mat-grid-list cols="4" rowHeight="200px">
-    Averages
+    <h4 style="padding-left: 20px">Averages Last 30 Days</h4>
     <mat-grid-tile>
         <mat-card class="example-card">
             <mat-card-header>
