--- a/src/app/analytics/workout-analysis/workout-analysis.component.html
+++ b/src/app/analytics/workout-analysis/workout-analysis.component.html
@@ -1,3 +1,5 @@
+<app-workout-total></app-workout-total>
+<mat-divider></mat-divider>
 <app-workout-analysis-averages></app-workout-analysis-averages>
 <mat-divider></mat-divider>
 <app-workout-last-progress></app-workout-last-progress>
