--- a/src/app/layout/navigation/side-navigation/side-navigation.component.html
+++ b/src/app/layout/navigation/side-navigation/side-navigation.component.html
@@ -1,4 +1,8 @@
 <mat-nav-list>
+    <a mat-list-item routerLink="/home" (click)="onClose()">
+      <mat-icon>home</mat-icon>
+      <span class="nav-caption" routerLink="/analytics">Home</span>
+    </a>
   <a mat-list-item routerLink="/analytics" (click)="onClose()">
     <mat-icon>timeline</mat-icon>
     <span class="nav-caption" routerLink="/analytics">Analytics</span>
